# NNFramework

./: .gitignore  CMakeLists.txt  README.md
NNFramework/headers/: README.md  STLAddons.hpp  deprecated.h  mt_queue.hpp  opencv.h  safeVec.hpp  tools.h
NNFramework/peripheralFramework/: NSVarTypeDict.hpp
NNFramework/py/: yolo_detect.py
NNFramework/src/: macro.cpp  mainFW.cpp  mainNN.cpp  test.cpp
hk/: CHANGELOG.md  LICENSE  hk.cabal
hk/app/: addTwo.hi  addTwo.hs  addTwo_stub.h  intf.hi  intf_stub.h
hk/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
